minor changes to aspnet core day post

--- a/index.html
+++ b/index.html
@@ -176,10 +176,12 @@ ga('send', 'pageview');
                 
         <p>Another month, another <a href="https://www.facebook.com/groups/BDotNet/" target="_blank" rel="external">BDotent</a> community event, but this time it is on latest <strong>ASP.NET Core</strong> technology and a full day event.</p>
 <p>We are not going to miss it. :)</p>
-<p>For me all the <a href="https://www.facebook.com/groups/BDotNet/" target="_blank" rel="external">BDotent</a> events are about getting to know the gist of the topic and leave with the enough enthusiasm to explore the remaining details.</p>
-<p>One more big thing is Networking, It is always pleasure to know what kind of applications other developers are working on, &amp; what all the tools &amp; technologies they are using.<br><em>(This time met some of the old buddies, and also some of the new friends.)</em></p>
+<p>For me all the <a href="https://www.facebook.com/groups/BDotNet/" target="_blank" rel="external">BDotent</a> events are about getting to know the gist of the topic and leave with enough enthusiasm to explore the remaining details.</p>
+<p>One more big thing is Networking, It is always pleasure to meet and know the fellow developers and to share the information on what type of applications we work on, and what all the tools &amp; technologies we are using.<br><em>(This time met some of the old buddies, and also made some new friends.)</em></p>
 <p><strong>Overall, it’s mainly the experience of being present at the event.</strong></p>
-<p>As usual, all the speakers wonderful in sharing their knowledge, and their enthusiasm conveys us the more. And the topics are very well chosen, like connecting the dots to get the overall picture on the ASP.NET core.</p>
+<p>As usual, all the speakers are wonderful in sharing their knowledge, and their enthusiasm conveys us the most. All the topics are very well chosen, like connecting the dots to get the overall picture on the ASP.NET core.</p>
+<p>Thank you for all the awesome speakers, and the organizing committee.</p>
+<p>It was wonderful to witness the house packed sessions.</p>
 <p><img src="/css/images/aspnetcoreday.png" alt=""></p>
 <p>My key takeaways from the event are,</p>
 <ol>
@@ -191,7 +193,7 @@ ga('send', 'pageview');
 </li>
 <li><p>POCO controller are very much useful when we do not require all the features from BaseController.</p>
 </li>
-<li><p>In new framework, Dependency Injection is already integrated, But if we can very much plug in the third party DI containers.</p>
+<li><p>In new framework, Dependency Injection is already integrated, But if require, we can very much plug in any of the third party DI containers.</p>
 </li>
 <li><p>New web server (Kestrel - cross platform) written from the scratch, for the .NET core.</p>
 </li>
