--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@ ga('send', 'pageview');
     <div class="article-entry" itemprop="articleBody">
       
                 
-        <p>Computed field helps us in doing some extra processing before adding the value to index.</p>
+        <p><img src="/css/images/sitecore-search-logo.png" alt=""></p>
+<p>Computed field helps us in doing some extra processing before adding the value to index.</p>
 <p>While creating a computed index field, always try to return null, rather than <em>String.Empty</em>(unless it is important to have an empty value), because <em>String.Empty</em> takes <strong>space</strong> in the index, whereas when it is null, it is not added to the index.</p>
 <p>By returning null value, we can save the space in the index.</p>
 <p><strong>Happy Learning :)</strong></p>
